Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7258

QS60Style: List item margins are too small due to invalid pixel metric value

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.3
    • 4.6.0
    • GUI: Look'n'Feel
    • None
    • af8b3c9d911a7ad6722bfa587b8a2f48c4254de3

    Description

      Currently QS60Style uses AVKON UI data for grids (difference in size between grid and its highlight rect halved) to calculate PM_FocusFrameVMargin and PM_FocusFrameHMargin.
      Which is sort of correct, when using the pixel metric for its described functionality. However, the same pixel metric is also used for calculating the text margins and in S60 AVKON, this
      value is a lot bigger (with nHD screen difference is 5 vs. 12).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes