QS60Style: Branch indicator in tree view is misplaced

Fix for QTBUG-7258 make itemview margins larger. This broke the
treeviews visually, as indicators are not shown in correct places.
Now, indocators are placed correctly for treeviews as well.

Task-number: QTBUG-7995
Reviewed-by: Alessandro Portale